# Omni-Directional-Driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
include/omnidirectional_driver/: omni_kinematics.hpp  omnidirectional_driver.hpp  visibility_control.hpp
include/omnidirectional_driver_cpp/: omni_kinematics.hpp  omnidirectional_driver.hpp
omnidirectional_driver/: omni_driver.py  robot_params.py
src/: omni_kinematics.cpp  omnidirectional_driver.cpp
